# tcg-price-tracker

./: .bandit  .editorconfig  .env  .env.example  .env.production.example  .env.test  .gitignore  .mcp.json  API_DOCUMENTATION.md  CLAUDE.md  LICENSE  README.md  debug_justtcg.py  docker-compose.yml  test_ebay_sandbox.py  test_fixes.py  test_justtcg_api.py  validate_pricecharting_migration.py  verify_justtcg.py
.claude/: settings.json
.github/: CODEOWNERS  WORKFLOW_DOCUMENTATION.md  dependabot.yml  pull_request_template.md
docs/: EBAY_INTEGRATION.md  (+1 more)
tcgtracker/: .dockerignore  .flake8  Dockerfile  README.md  alembic.ini  pyproject.toml  test_basic.py
tcgtracker/migrations/: env.py
tcgtracker/migrations/versions/: 001_initial_schema.py  002_add_pricing_sources.py  aa36f8c7ba94_add_username_column.py  bb47d9e8cf23_add_missing_tables.py  cc58e0f9da34_align_schema_with_models.py  dd69f1a0eb45_denormalize_latest_price_and_cleanup.py  ee7a02b1fc56_add_new_tcg_types.py
tcgtracker/src/tcgtracker/: __init__.py  __main__.py  cli.py  config.py  main.py  redis_manager.py
tcgtracker/src/tcgtracker/api/: __init__.py  dependencies.py  rate_limit.py  schemas.py
tcgtracker/src/tcgtracker/api/v1/: __init__.py  auth.py  cards.py  collections.py  prices.py  search.py  users.py  webhooks.py
tcgtracker/src/tcgtracker/database/: __init__.py  connection.py  migrations_manager.py  models.py
tcgtracker/src/tcgtracker/integrations/: __init__.py  base.py  ebay.py  justtcg.py  pricecharting.py  tcgplayer.py
tcgtracker/src/tcgtracker/utils/: __init__.py  circuit_breaker.py  enum_mappings.py  errors.py  exceptions.py
tcgtracker/src/tcgtracker/validation/: __init__.py  business_rules.py  exceptions.py  sanitizers.py  search_validators.py  validators.py
tcgtracker/src/tcgtracker/workers/: __init__.py  celery_app.py
tcgtracker/src/tcgtracker/workers/tasks/: __init__.py  alert_tasks.py  price_tasks.py  sync_tasks.py
tcgtracker/tests/: test_collections.py  test_example.py
tcgtracker/tests/integration/: __init__.py  test_ebay_client.py  test_error_handling.py  test_pricecharting_client.py  test_tcgplayer_client.py
(+79 files in other folders)
